--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
 			<p class="subtitulo-exp">Marzo 2021 - presente</p>
 			<p class="descrip-exp">• Desarrollo y mantenimiento de sitios web con HTML, CSS y JavaScript.</p>
 			<p class="descrip-exp">• Mejora del rendimiento y solución de problemas técnicos en los sitios web.</p>
-			<p class="descrip-exp">• Implementación de diseños responsivos y adaptativos para una experiencia de usuario óptima en diversos dispositivos y pantallas.</p>
-			<p class="descrip-exp">• Integración de APIs y servicios externos para agregar funcionalidades avanzadas, como pagos y autenticación.</p>
+			<p class="descrip-exp">• Implementación de diseños responsivos y adaptativos para una experiencia de usuario
+				óptima en diversos dispositivos y pantallas.</p>
+			<p class="descrip-exp">• Integración de APIs y servicios externos para agregar funcionalidades avanzadas,
+				como pagos y autenticación.</p>
 		</div>
 
 	</div>
@@ -120,7 +122,8 @@
 			<p class="subtitulo-exp">Everneed SRL - Cool Tools</p>
 			<p class="subtitulo-exp">Agosto 2022 - presente</p>
 			<p class="descrip-exp">• Diseño de etiquetas atractivas y funcionales.</p>
-			<p class="descrip-exp">• Dominio de herramientas de diseño gráfico como Photoshop, Illustrator e InDesign.</p>
+			<p class="descrip-exp">• Dominio de herramientas de diseño gráfico como Photoshop, Illustrator e InDesign.
+			</p>
 			<p class="descrip-exp">• Modelado 3D de objetos realistas y detallados.</p>
 			<p class="descrip-exp">• Gestión de proyectos y trabajo colaborativo.</p>
 		</div>
@@ -137,8 +140,10 @@
 			<p class="subtitulo-exp">Enero 2022 - Enero 2023</p>
 			<p class="descrip-exp">• Diseño de personajes memorables y visualmente atractivos.</p>
 			<p class="descrip-exp">• Creación de ilustraciones y dibujos detallados para el desarrollo del cómic.</p>
-			<p class="descrip-exp">• Dominio de técnicas y estilos de dibujo para transmitir emociones y narrativa visual.</p>
-			<p class="descrip-exp">• Colaboración en el proceso de creación de la historia y diseño de viñetas para el cómic.</p>
+			<p class="descrip-exp">• Dominio de técnicas y estilos de dibujo para transmitir emociones y narrativa
+				visual.</p>
+			<p class="descrip-exp">• Colaboración en el proceso de creación de la historia y diseño de viñetas para el
+				cómic.</p>
 		</div>
 
 	</div>
@@ -154,7 +159,8 @@
 			<p class="descrip-exp">• Creación de obras digitales con estilo y atractivo visual.</p>
 			<p class="descrip-exp">• Ilustración detallada y expresiva para diversos proyectos.</p>
 			<p class="descrip-exp">• Dominio de técnicas digitales para transmitir emociones y narrativa visual.</p>
-			<p class="descrip-exp">• Colaboración activa en el diseño y desarrollo de proyectos artísticos digitales.</p>
+			<p class="descrip-exp">• Colaboración activa en el diseño y desarrollo de proyectos artísticos digitales.
+			</p>
 		</div>
 
 	</div>
@@ -202,48 +208,46 @@
 	<section class="work-section reveal">
 		<div class="container">
 			<div class="section-title reveal">
-				<h2>Trabajos</h2>
+				<p class="titulo">Trabajos</p>
+				<p class="descripciones">Presiona para ir a la página.</p>
 			</div>
 			<div class="row">
-				<div class="col-lg-6">
+				<div class="col-lg-3">
 					<a href="https://yavelart.netlify.app/index.html">
-						<div class="trab" style="background-color: #94c4d8;">
+						<div class="trab">
 							<div class="trab-item" style="background-color: #00000000;" align="center">
 								<img src="imagenes/yavelart.png" alt="Logo de YavelArt">
 							</div>
 						</div>
 					</a>
 				</div>
-				<div class="col-lg-6">
+				<div class="col-lg-3">
 					<a href="https://studioy2021.wordpress.com/">
-						<div class="trab" style="background-color: #d193b9;">
+						<div class="trab">
 							<div class="trab-item" style="background-color: #00000000;" align="center">
 								<img src="imagenes/sy.png" alt="Logo de StudioY">
 							</div>
 						</div>
 					</a>
 				</div>
-				<div class="col-lg-6">
+				<div class="col-lg-3">
 					<a href="https://yaveldesign.netlify.app/">
-						<div class="trab" style="background-color: #a7aaed;">
+						<div class="trab">
 							<div class="trab-item" style="background-color: #00000000;" align="center">
 								<img src="imagenes/yaveldesign.png" alt="Logo de YavelDesign">
 							</div>
 						</div>
 					</a>
 				</div>
-				<div class="col-lg-6">
+				<div class="col-lg-3">
 					<a href="https://romerotextil.000webhostapp.com/alfombras/index.html">
-						<div class="trab" style="background-color: #80d29b;">
+						<div class="trab">
 							<div class="trab-item" style="background-color: #00000000;" align="center">
 								<img src="imagenes/rt.png" alt="Logo de Romero Textil">
 							</div>
 						</div>
 					</a>
 				</div>
-			</div>
-			<div class="text-center mt-4">
-				<a href="https://github.com/YavelRico" class="btn btn-primary">GitHub</a>
 			</div>
 		</div>
 	</section>
