--- a/index.html
+++ b/index.html
@@ -217,15 +217,18 @@
 						<div class="trab">
 							<div class="trab-item" style="background-color: #00000000;" align="center">
 								<img src="imagenes/yavelart.png" alt="Logo de YavelArt">
+								<a href="https://yavelart.netlify.app/index.html"><p class="boton-work">Página</p></a>
+								<a href="https://github.com/YavelRico/YavelArt"><p class="boton-work">GitHub</p></a>
 							</div>
 						</div>
 					</a>
 				</div>
 				<div class="col-lg-3">
-					<a href="https://studioy2021.wordpress.com/">
+					<a href="#">
 						<div class="trab">
 							<div class="trab-item" style="background-color: #00000000;" align="center">
-								<img src="imagenes/sy.png" alt="Logo de StudioY">
+								<img src="imagenes/yavelcode.png" alt="Logo de YavelCode">
+								<a href="https://github.com/YavelRico/YavelCode"><p class="boton-work">GitHub</p></a>
 							</div>
 						</div>
 					</a>
@@ -235,6 +238,8 @@
 						<div class="trab">
 							<div class="trab-item" style="background-color: #00000000;" align="center">
 								<img src="imagenes/yaveldesign.png" alt="Logo de YavelDesign">
+								<a href="https://yaveldesign.netlify.app/"><p class="boton-work">Página</p></a>
+								<a href="https://github.com/YavelRico/YavelDesign"><p class="boton-work">GitHub</p></a>
 							</div>
 						</div>
 					</a>
@@ -244,6 +249,8 @@
 						<div class="trab">
 							<div class="trab-item" style="background-color: #00000000;" align="center">
 								<img src="imagenes/rt.png" alt="Logo de Romero Textil">
+								<a href="https://romerotextil.000webhostapp.com/alfombras/index.html"><p class="boton-work">Página</p></a>
+								<a href="https://github.com/YavelRico/RomeroTextil"><p class="boton-work">GitHub</p></a>
 							</div>
 						</div>
 					</a>
@@ -251,7 +258,7 @@
 			</div>
 		</div>
 	</section>
-
+	<br><br><br><br><br>
 	<footer class="footer-section">
 		<div class="container">
 			<div class="footer-cta pt-5 pb-5">
