--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<p class="typewriter-subtext2" id="typewriter-subtext2"><span id="typewriter-underscore"></span></p>
 		</div>
 		<div class="imagen">
-			<img src="imagenes/intro.PNG">
+			<img src="imagenes/intro.GIF">
 		</div>
 	</div>
 
@@ -204,7 +204,7 @@
 		</div>
 	</div>
 
-	<br id="work"><br><br><br>
+	<br id="work"><br><br>
 	<section class="work-section reveal">
 		<div class="container">
 			<div class="section-title reveal">
