--- a/index.html
+++ b/index.html
@@ -234,23 +234,11 @@
 					</a>
 				</div>
 				<div class="col-lg-3">
-					<a href="https://yaveldesign.netlify.app/">
+					<a href="https://www.everneed.com.ar/index.html">
 						<div class="trab">
 							<div class="trab-item" style="background-color: #00000000;" align="center">
-								<img src="imagenes/yaveldesign.png" alt="Logo de YavelDesign">
-								<a href="https://yaveldesign.netlify.app/"><p class="boton-work">Página</p></a>
-								<a href="https://github.com/YavelRico/YavelDesign"><p class="boton-work">GitHub</p></a>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-lg-3">
-					<a href="https://romerotextil.000webhostapp.com/alfombras/index.html">
-						<div class="trab">
-							<div class="trab-item" style="background-color: #00000000;" align="center">
-								<img src="imagenes/rt.png" alt="Logo de Romero Textil">
-								<a href="https://romerotextil.000webhostapp.com/alfombras/index.html"><p class="boton-work">Página</p></a>
-								<a href="https://github.com/YavelRico/RomeroTextil"><p class="boton-work">GitHub</p></a>
+								<h2 style="color: white;">Everneed</h2>
+								<a href="https://www.everneed.com.ar/index.html"><p class="boton-work">Página</p></a>
 							</div>
 						</div>
 					</a>
